Fix line breaks in draft view

--- a/src/components/DocumentView.module.css
+++ b/src/components/DocumentView.module.css
@@ -127,6 +127,7 @@
   margin-top: 4px;
   font-style: italic;
   color: #333;
+  white-space: pre-wrap;
 }
 
 .commentLabel {
@@ -157,6 +158,7 @@
 .defectDescription {
   flex: 1;
   text-align: justify;
+  white-space: pre-wrap;
 }
 
 .noDefects {
